[package]
name = "fbd_sequencer"
version = "0.2.2"
edition = "2021"
authors = ["Seiji Ainoguchi <seiji.ainoguchi@gmail.com>"]
description = "A sequencer for playing music using PSG or AY-3-8910 sound sources. Supports playing .fbd sequence files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ain1084/rust_fbd_sequencer"
homepage = "https://github.com/ain1084/rust_fbd_sequencer"
documentation = "https://docs.rs/fbd_sequencer"
readme = "README.md"
keywords = ["sequencer", "music", "PSG", "AY-3-8910", "audio"]
categories = ["multimedia", "no-std"]

[dependencies]
byteorder = "1.5.0"
arraydeque = "0.5.1"

[features]
default = ["float"]
float = []
